# testsbxml

./: CMakeLists.txt  README.md
.github/workflows/: brief.yml  cmake.yml
examples/: CMakeLists.txt
examples/c++/: CMakeLists.txt  createTSB.cpp  echoTSB.cpp
src/: CMakeLists.txt
src/bindings/csharp/: AssemblyInfo.cs.in  CMakeLists.txt  compile-native-files.cmake  libtsb.i  local.i
src/bindings/java/: CMakeLists.txt  Manifest.txt.in  compile-native-files.cmake  local.i
src/bindings/python/: CMakeLists.txt  add_version.cmake  libtsb.i  local-contrib.i  local.cpp  local.i
src/bindings/swig/: ListWrapper.h  libtsb.h  libtsb.i
src/tsb/: CMakeLists.txt  TSBBase.cpp  TSBBase.h  TSBComment.cpp  TSBComment.h  TSBConstructorException.cpp  TSBDocument.cpp  TSBDocument.h  TSBError.cpp  TSBError.h  TSBErrorLog.cpp  TSBErrorLog.h  TSBErrorTable.h  TSBListOfComments.cpp  TSBListOfComments.h  TSBNamespaces.cpp  TSBNamespaces.h  TSBReader.cpp  TSBReader.h  TSBTypeCodes.cpp  TSBTypeCodes.h  TSBTypes.h  TSBWriter.cpp
src/tsb/common/: common.h  libtsb-namespace.h.cmake  tsbfwd.h
src/tsb/test/: CMakeLists.txt  TestCommentClass.cpp  TestCopyAndClone.cpp  TestRunner.cpp
src/tsb/util/: ExpectedAttributes.cpp  ExpectedAttributes.h  List.cpp  List.h  memory.c  memory.h  util.cpp  util.h
